--- a/src/components/collection-item/CollectionItem.scss
+++ b/src/components/collection-item/CollectionItem.scss
@@ -4,12 +4,30 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: relative;
   .image {
     width: 100%;
     height: 95%;
     background-size: cover;
     background-position: center;
     margin-bottom: 5px;
+  }
+  .custom-button {
+    width: 80%;
+    opacity: 0.7;
+    position: absolute;
+    top: 255px;
+    display: none;
+  }
+  &:hover {
+    .image {
+      opacity: 0.8;
+      transition: all 0.3s ease-in; 
+    }
+    .custom-button {
+      opacity: 0.85;
+      display: flex;
+    }
   }
   .collection-footer {
     width: 100%;
