--- a/src/components/custom-button/CustomButton.scss
+++ b/src/components/custom-button/CustomButton.scss
@@ -29,4 +29,14 @@
             color: #57c2ca;;
         }
     }
+    &.inverted {
+      background-color: white;
+      color: black;
+      border: 1px solid black;
+      &:hover {
+        background-color: black;
+        color: white;
+        border: none;
+      }
+    }
   }
